--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,9 +6,9 @@
 
 @import "./components/app";
 @import "./components/list";
-@import "./components/canvas";
-@import "./components/category";
+
+
 @import "./components/navigation";
-@import "./components/note";
+
 @import "./components/notes";
-@import "./components/search";
+;
