--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -12,9 +12,22 @@
         box-shadow: 0 0 15px rgba(0, 0, 0, 0.9);
 
         &-logo {
-            margin-right: 4rem;
+            // margin-right: 4rem;
             margin-left: 6rem;
-            width: 15rem;
+
+            width: 18rem;
+
+            @include respond(tablet) {
+                width: 12rem;
+                margin-left: 4rem;
+
+            }
+
+            @include respond(phone) {
+                margin-left: 4rem;
+                width: 10rem;
+            }
+
             overflow: auto;
 
             &-img {
@@ -24,39 +37,77 @@
                 margin-top: 1rem;
                 background-color: $colorLightOrange;
                 width: 3rem;
+
+                @include respond(tablet) {
+                    width: 2rem;
+                    margin-top: 1rem;
+                    // width: 10%;
+                    margin-right: .5rem;
+                }
+
                 clip-path: polygon(0% 0%, 60% 0%, 100% 40%, 100% 100%, 0% 100%);
                 margin-right: 1.3rem;
             }
 
             &-content {
+
+                @include respond(phone) {
+                    margin-left: 0.5rem;
+                    margin-top: 2.1rem;
+                    font-size: 2rem;
+                }
+
                 font-size: 2.2rem;
                 color: $colorDarkSecondary;
                 margin-top: 2rem;
                 margin-left: 1rem;
                 font-weight: 400;
-                font-family: 'PT Sans', sans-serif;
+                font-family: 'PT Sans',
+                sans-serif;
             }
         }
 
         &-search {
             &-current {
-                margin: 1rem 10rem 1rem 1rem;
-                border-radius: 1rem;
+                box-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
                 background-color: #fff;
+                margin: 1rem auto;
+                border-radius: 1rem;
+
                 position: relative;
-                width: 70rem;
+                width: 80rem;
+
+                //update 1
+                @include respond(tablet-landscape) {
+                    width: 50rem
+                }
+
+                @include respond(tablet) {
+                    width: 30rem
+                }
+
+                @include respond(phone) {
+                    margin: 1rem 0 1rem 0;
+                    width: 15rem;
+                }
+
                 color: #525355;
 
+
                 &-icon {
-                    &:hover{
-                        background-color: rgba(225, 225, 225, 0.8);
+
+                    &:hover {
+                        background-color: rgba(238, 234, 234, 0.8);
                     }
+
+                    @include respond(phone) {}
+
                     border-radius: 100%;
                     padding: 1rem;
                     width: 3rem;
                     margin: .3rem;
                     float: left;
-                    color: #525355;
+                    color: $colorDarkPrimary;
                     font-size: 2.4rem !important;
                 }
 
@@ -74,25 +125,39 @@
                     float: left;
                     color: $colorDarkPrimary;
 
+                    @include respond(tablet-landscape) {
+                        width: 79%;
+                    }
+
+                    @include respond(tablet) {
+                        width: 60%;
+                    }
+
+                    @include respond(phone) {
+                        width: 20%;
+                    }
+
                     background-color: transparent;
                     outline: none;
                     border: none;
                     margin: .5rem 0;
                     height: 3.4rem;
-                    width: 59rem;
-
+                    // min-width: 81%;
+                    width: 85%;
                 }
             }
 
-            margin: 1rem 10rem 1rem 1rem;
-            border-radius: 1rem;
             background-color: #525355;
+            margin: 1rem auto;
+            border-radius: 1rem;
+
             position: relative;
-            width: 70rem;
-            color: #fff;
+            width: 23%;
+            color: rgb(51, 49, 49);
 
             &-icon {
                 width: 3rem;
+
                 margin: 1.3rem 1.3rem;
                 float: left;
                 color: $colorDarkSecondary;
@@ -101,7 +166,8 @@
 
             &-input {
                 &::placeholder {
-                    color: #fff
+
+                    color: $colorDarkSecondary;
                 }
 
                 letter-spacing: .13rem;
@@ -118,7 +184,19 @@
                 border: none;
                 margin: .5rem 0;
                 height: 3.4rem;
-                width: 59rem;
+
+
+
+                @include respond(tablet-landscape) {
+                    width: 50%
+                }
+
+                @include respond(tablet) {
+                    width: 20%;
+                }
+
+
+                width: auto;
 
             }
 
@@ -126,43 +204,84 @@
         }
 
         &-options {
+            padding: 0 3rem;
+
+            @include respond(tablet-landscape) {
+                padding: 0 3rem;
+            }
+
+            @include respond(tablet) {
+                padding: 0 3rem;
+            }
+
+            @include respond(phone) {
+                padding: 0 1rem;
+            }
 
             &-item {
+
                 &-icon {
+
+                    &-settings {
+                        color: $colorDarkSecondary;
+                        background-color: $colorDarkPrimary;
+                        position: absolute;
+                        bottom: -9rem;
+                        box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+                        border-radius: 1rem;
+                        left: -10rem;
+                        width: 14rem;
+
+                        &-option {
+                            &:hover {
+                                background-color: rgba($colorDarkSecondary, 0.1);
+                            }
+
+                            border-radius: 1rem;
+                            cursor: pointer;
+
+                            padding:1.5rem 1rem;
+                            // margin:1rem 1rem;
+                            font-size: 1.2rem;
+                            font-family: "Open Sans",
+                            "Helvetica Neue",
+                            sans-serif;
+                        }
+                    }
+
                     &:hover {
                         transition: 0.2s all;
-                        color: #ffffff;
+                        color: #5a5757;
                         background-color: rgba(#98989A, 0.1);
                     }
 
                     border-radius:100%;
+
+                    @include respond(phone) {
+                        padding: .1rem;
+                        margin: 1.8rem 0;
+                    }
+
+
                     padding: .7rem .7rem .7rem .7rem;
                     color:#98989A;
                     margin:1.3rem 0;
                     font-size: 2.6rem !important;
                 }
-
-                &-image {
-                    float: right;
-                    margin: 1.8rem 3rem 1.8rem 1rem;
-                    width: 3rem;
-                    border-radius: 100%;
-                }
             }
 
         }
 
-        // overflow: hidden;
         width: 100vw;
     }
 }
 
 .light {
     &-navbar {
+        z-index: 100;
         position: fixed;
         top: 0;
         left: 0;
-
         background-color: $colorLightPrimary;
         display: flex;
         flex-direction: row;
@@ -171,9 +290,22 @@
         box-shadow: 0 0 15px rgba(0, 0, 0, 0.9);
 
         &-logo {
-            margin-right: 4rem;
+            // margin-right: 4rem;
             margin-left: 6rem;
-            width: 15rem;
+
+            width: 18rem;
+
+            @include respond(tablet) {
+                width: 12rem;
+                margin-left: 4rem;
+
+            }
+
+            @include respond(phone) {
+                margin-left: 4rem;
+                width: 10rem;
+            }
+
             overflow: auto;
 
             &-img {
@@ -183,89 +315,240 @@
                 margin-top: 1rem;
                 background-color: $colorLightOrange;
                 width: 3rem;
+
+                @include respond(tablet) {
+                    width: 2rem;
+                    margin-top: 1rem;
+                    // width: 10%;
+                    margin-right: .5rem;
+                }
+
                 clip-path: polygon(0% 0%, 60% 0%, 100% 40%, 100% 100%, 0% 100%);
                 margin-right: 1.3rem;
             }
 
             &-content {
+
+                @include respond(phone) {
+                    margin-left: 0.5rem;
+                    margin-top: 2.1rem;
+                    font-size: 2rem;
+                }
+
                 font-size: 2.2rem;
-                color: $colorDarkPrimary;
+                color: $colorLightSecondary;
                 margin-top: 2rem;
                 margin-left: 1rem;
                 font-weight: 400;
-                font-family: 'PT Sans', sans-serif;
+                font-family: 'PT Sans',
+                sans-serif;
             }
         }
 
         &-search {
+            &-current {
+                box-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
+                background-color: #fff;
+                margin: 1rem auto;
+                border-radius: 1rem;
 
-            margin: 1rem 10rem 1rem 1rem;
-            border-radius: 1rem;
-            background-color: #F1F3F4;
-            position: relative;
-            width: 70rem;
+                position: relative;
+                width: 80rem;
 
-            &-icon {
-                &:hover {
-                    transition: 0.2s all;
-                    color: $colorLightSecondary;
-                    background-color: rgba(#98989A, 0.1);
+                //update 1
+                @include respond(tablet-landscape) {
+                    width: 50rem
                 }
 
-                border-radius: 100%;
-                padding: 1rem 1rem;
+                @include respond(tablet) {
+                    width: 30rem
+                }
+
+                @include respond(phone) {
+                    margin: 1rem 0 1rem 0;
+                    width: 15rem;
+                }
+
+                color: #525355;
+
+
+                &-icon {
+
+                    &:hover {
+                        background-color: rgba(238, 234, 234, 0.8);
+                    }
+
+                    @include respond(phone) {}
+
+                    border-radius: 100%;
+                    padding: 1rem;
+                    width: 3rem;
+                    margin: .3rem;
+                    float: left;
+                    color: $colorLightSecondary;
+                    font-size: 2.4rem !important;
+                }
+
+                &-input {
+                    &::placeholder {
+                        color: $colorLightSecondary;
+                    }
+
+                    letter-spacing: .13rem;
+                    word-spacing: .4rem;
+                    font-family: "Roboto",
+                    Arial,
+                    sans-serif;
+                    font-size: 1.6rem;
+                    float: left;
+                    color: $colorLightSecondary;
+
+                    @include respond(tablet-landscape) {
+                        width: 79%;
+                    }
+
+                    @include respond(tablet) {
+                        width: 60%;
+                    }
+
+                    @include respond(phone) {
+                        width: 20%;
+                    }
+
+                    background-color: transparent;
+                    outline: none;
+                    border: none;
+                    margin: .5rem 0;
+                    height: 3.4rem;
+                    width: 87%;
+                }
+            }
+
+            background-color: #d6dce7;
+            margin: 1rem auto;
+            border-radius: 1rem;
+
+            position: relative;
+            width: 23%;
+            color: rgb(51, 49, 49);
+
+            &-icon {
                 width: 3rem;
-                margin: .3rem .3rem;
+
+                margin: 1.3rem 1.3rem;
                 float: left;
                 color: $colorLightSecondary;
                 font-size: 2.4rem !important;
             }
 
             &-input {
+                &::placeholder {
+
+                    color: rgb(51, 49, 49);
+                }
+
                 letter-spacing: .13rem;
                 word-spacing: .4rem;
-                font-family: "Roboto", Arial, sans-serif;
+                font-family: "Roboto",
+                Arial,
+                sans-serif;
                 font-size: 1.6rem;
                 float: left;
+                color: $colorLightSecondary;
+
                 background-color: transparent;
                 outline: none;
                 border: none;
                 margin: .5rem 0;
                 height: 3.4rem;
-                width: 59rem;
+
+
+
+                @include respond(tablet-landscape) {
+                    width: 50%
+                }
+
+                @include respond(tablet) {
+                    width: 20%;
+                }
+
+
+                width: auto;
 
             }
+
 
         }
 
         &-options {
+            padding: 0 3rem;
+
+            @include respond(tablet-landscape) {
+                padding: 0 3rem;
+            }
+
+            @include respond(tablet) {
+                padding: 0 3rem;
+            }
+
+            @include respond(phone) {
+                padding: 0 1rem;
+            }
 
             &-item {
+
                 &-icon {
+
+                    &-settings {
+                        color: $colorLightSecondary;
+                        background-color: $colorLightPrimary;
+                        position: absolute;
+                        bottom: -9rem;
+                        box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+                        border-radius: 1rem;
+                        left: -10rem;
+                        width: 14rem;
+
+                        &-option {
+                            &:hover {
+                                background-color: rgba($colorLightSecondary, 0.1);
+                            }
+
+                            border-radius: 1rem;
+                            cursor: pointer;
+
+                            padding:1.5rem 1rem;
+                            // margin:1rem 1rem;
+                            font-size: 1.2rem;
+                            font-family: "Open Sans",
+                            "Helvetica Neue",
+                            sans-serif;
+                        }
+                    }
+
                     &:hover {
                         transition: 0.2s all;
-                        color: $colorLightSecondary;
+                        color: #5a5757;
                         background-color: rgba(#98989A, 0.1);
                     }
 
                     border-radius:100%;
+
+                    @include respond(phone) {
+                        padding: .1rem;
+                        margin: 1.8rem 0;
+                    }
+
+
                     padding: .7rem .7rem .7rem .7rem;
-                    color:#5F6368;
+                    color:#98989A;
                     margin:1.3rem 0;
                     font-size: 2.6rem !important;
-                }
-
-                &-image {
-                    float: right;
-                    margin: 1.8rem 3rem 1.8rem 1rem;
-                    width: 3rem;
-                    border-radius: 100%;
                 }
             }
 
         }
 
-        // overflow: hidden;
-        width: 95vw;
+        width: 100vw;
     }
 }
