--- a/src/sass/utility/_basic.scss
+++ b/src/sass/utility/_basic.scss
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    
     overflow-y: auto;
     overflow-x: hidden;
 
@@ -7,6 +8,9 @@ body {
 
         background: transparent;
         width: 10px;
+        @include respond(tablet) {
+            width:0;
+        }
     }
 
     &::-webkit-scrollbar-track {
